# Phi_Path_Planning-moveit

./: README.md
Assignment1/Solution/ur5_gripper_moveit_config/: package.xml
Assignment2/ur5_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
Assignment2/ur5_gripper_moveit_config/config/: ur5.srdf
Assignment2/ur5_gripper_moveit_config/launch/: moveit.rviz  planning_scene_ros_api.launch
Assignment2/ur5_gripper_moveit_config/src/: moveit_group_interface.cpp  planning_scene_ros_api.cpp
Final_Project/: Readme.md
Final_Project/robotiq_description/urdf/: robotiq_85_gripper.transmission.xacro
Final_Project/ur5_description/urdf/: ur5_robotiq85_gripper.urdf(copy).xacro
Final_Project/urg5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  try
Final_Project/urg5_moveit_config/config/: controller.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  ur5.srdf  world2.rviz
Final_Project/urg5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_planning_execution.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch
Final_Project/urg5_moveit_config/world/: object1.scene  simple_pick_and_place
Final_project/robotiq_description/launch/: display_robotiq85.launch
Final_project/ur5_description/urdf/: ur5_joint_limited_robot.urdf  ur5_robotiq85_gripper.urdf.xacro
Final_project/ur5_gripper_moveit_config/config/: fake_controllers.yaml  ompl_planning.yaml  stomp_planning.yaml
(+25 files in other folders)
